--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wdth,wght@62.5..100,100..900&family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;1,400&display=swap');
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.noto-serif-bengali {
+    font-family: "Noto Serif Bengali", serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .poppins {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
-}
+
+  html, body{
+    font-family: "Noto Serif Bengali", serif;
+  }
+
+
